package org.example;

public class Main {

        public static void main(String[] args) {
            Menu menu1 = new Menu();
            menu1.switchOptions();
        }
    }